// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the expected classes when not visitor 1`] = `
<div>
  <div
    class="message botMessage"
  >
    <div>
      <div
        class="messageBubble messageBubble botBackground"
      >
        <span
          class="Linkify"
        >
          not a visitor
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders the expected classes when visitor 1`] = `
<div>
  <div
    class="message userMessage"
  >
    <div>
      <div
        class="messageBubble messageBubble userBackground"
      >
        <span
          class="Linkify"
        >
          a visitor
        </span>
      </div>
    </div>
  </div>
</div>
`;
